# gfx-lib

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/gfx/: BGFXContext.cppm  BGFXDrawCallback.cppm  CMakeLists.txt  Camera.cppm  Colour.cppm  Image.cppm  IndexBuffer.cppm  Material.cppm  Projection.cppm  RenderCommand.cppm  RenderObject.cppm  RenderState.cppm  RenderTexture.cppm  ShaderPlatformInfo.cppm  ShaderProgram.cppm  Sprite.cppm  SpriteObject.cppm  TextureCoordinates.cppm  VertexBuffer.cppm  Viewport.cppm  ViewportUtilities.cpp  ViewportUtilities.cppm
src/gfx-reflection/: CMakeLists.txt  Camera.cppm  Colour.cppm  ColourReflection.cppm  Image.cppm  Material.cppm  MaterialDescriptorReflection.cppm  Projection.cppm  Reflection.cpp  Reflection.cppm  RenderObject.cppm  ShaderProgram.cppm  ShaderProgramDescriptorReflection.cppm  Sprite.cppm  SpriteObject.cppm  TextureCoordinates.cppm  TextureCoordinatesReflection.cppm  Viewport.cppm
src/gfx-reflection/atlas/: CMakeLists.txt  ImageAtlas.cppm
src/gfx-reflection/font/: CMakeLists.txt  FontObject.cppm
src/gfx-reflection/tilemap/: CMakeLists.txt  Tilemap.cppm  TilemapObject.cppm
src/gfx/atlas/: CMakeLists.txt  ImageAtlas.cppm  ImageAtlasDescriptor.cppm
src/gfx/atlas/services/: CMakeLists.txt  ImageAtlasLoadSystemService.cppm
src/gfx/atlas/systems/: CMakeLists.txt  ImageAtlasLoadSystem.cpp  ImageAtlasLoadSystem.cppm
src/gfx/bgfx/: BGFXContext.cppm  BGFXFrameBuffer.cppm  BGFXShader.cppm  BGFXShaderProgram.cppm  BGFXState.cpp  BGFXState.cppm  BGFXTexture.cppm  BGFXTransientIndexBuffer.cppm  BGFXTransientVertexBuffer.cppm  BGFXUniform.cppm  BGFXVertexLayout.cppm  CMakeLists.txt
src/gfx/bgfx/services/: BGFXRenderSystemService.cppm  BGFXResourceCreationSystemService.cppm  BGFXSystemsService.cpp  BGFXSystemsService.cppm  CMakeLists.txt
src/gfx/bgfx/systems/: BGFXRenderSystem.cpp  BGFXRenderSystem.cppm  BGFXResourceCreationSystem.cpp  BGFXResourceCreationSystem.cppm  BGFXSystems.cpp  BGFXSystems.cppm  CMakeLists.txt
src/gfx/camera/: CMakeLists.txt  Camera.cppm  CameraDescriptor.cppm  RenderCandidates.cppm
src/gfx/camera/services/: CMakeLists.txt  CreateRenderCandidatesVisitorSystemService.cppm
src/gfx/camera/systems/: CMakeLists.txt  CreateRenderCandidatesVisitorSystem.cpp  CreateRenderCandidatesVisitorSystem.cppm
src/gfx/descriptors/: CMakeLists.txt  CameraDescriptor.cppm  ImageDescriptor.cppm  MaterialDescriptor.cppm  ShaderDescriptor.cppm  ShaderProgramDescriptor.cpp  ShaderProgramDescriptor.cppm  SpriteDescriptor.cppm  ViewportDescriptor.cppm
src/gfx/font/: CMakeLists.txt  Font.cppm  FontDescriptor.cppm  FontObject.cppm
src/gfx/font/services/: CMakeLists.txt  FontLoadSystemService.cppm  FontRenderSystemService.cppm
src/gfx/font/systems/: CMakeLists.txt  FontLoadSystem.cpp  FontLoadSystem.cppm  FontRenderSystem.cpp  FontRenderSystem.cppm
src/gfx/resources/: MaterialResource.cppm  ShaderProgramResource.cppm
src/gfx/resources/descriptors/: ShaderProgramDescriptor.cppm
src/gfx/resources/systems/: MaterialLoadSystem.cpp  MaterialLoadSystem.cppm  ShaderProgramLoadSystem.cpp  ShaderProgramLoadSystem.cppm
src/gfx/services/: BGFXSystemService.cppm  CMakeLists.txt  GfxSystemsService.cpp  GfxSystemsService.cppm  ImageLoadSystemService.cppm  MaterialLoadSystemService.cppm  ShaderProgramLoadSystemService.cppm  SpriteAnimationSystemService.cppm  SpriteLoadSystemService.cppm
src/gfx/sprite/: CMakeLists.txt  Sprite.cppm  SpriteDescriptor.cppm  SpriteObject.cppm
src/gfx/sprite/services/: CMakeLists.txt  SpriteAnimationSystemService.cppm  SpriteLoadSystemService.cppm  SpriteRenderSystemService.cppm
src/gfx/sprite/systems/: CMakeLists.txt  SpriteAnimationSystem.cpp  SpriteAnimationSystem.cppm  SpriteLoadSystem.cpp  SpriteLoadSystem.cppm  SpriteRenderSystem.cpp  SpriteRenderSystem.cppm
src/gfx/systems/: BGFXSystem.cpp  BGFXSystem.cppm  CMakeLists.txt  GfxSystems.cpp  GfxSystems.cppm  ImageLoadSystem.cpp  ImageLoadSystem.cppm  MaterialLoadSystem.cpp  MaterialLoadSystem.cppm  ShaderProgramLoadSystem.cpp  ShaderProgramLoadSystem.cppm  SpriteAnimationSystem.cpp  SpriteLoadSystem.cpp  SpriteLoadSystem.cppm  SpriteRenderSystem.cpp
src/gfx/tilemap/: CMakeLists.txt  Tilemap.cppm  TilemapDescriptor.cppm  TilemapObject.cppm
src/gfx/tilemap/services/: CMakeLists.txt  TilemapLoadSystemService.cppm  TilemapRenderSystemService.cppm
src/gfx/tilemap/systems/: CMakeLists.txt  TilemapLoadSystem.cpp  TilemapLoadSystem.cppm  TilemapRenderSystem.cpp  TilemapRenderSystem.cppm
tests/: CMakeLists.txt
tests/bgfx/: BGFXStateTests.cpp  CMakeLists.txt
